# web_site_1

myproject/: db.sqlite3  pyproject.toml
myproject/mypolicy/: settings.py  urls.py
myproject/policyapp/: views.py
web/: Portfolio_YouthRoad.pptx  README.md  autonomous_bypass_test.py  deep_diagnose.py  deep_match_diag.py  diagnose_api.py  exhaustive_probe.py  final_socket_check.py  list_google_models.py  pyproject.toml  requirements.txt  seed_support.py  test_aq_key.py  test_proxy_fix.py  test_urllib_bypass.py  verify_api.py  verify_api_v2.py
web (2)/: pyproject.toml
web (2)/chatbot/core/: models.py  urls.py
web (2)/chatbot/core/migrations/: 0002_userprofile_sub_region.py
web (2)/config/: settings.py  urls.py
web (2)/mainwindow/static/mainwindow/css/: base.css  home.css  recap.css
web (2)/mainwindow/static/mainwindow/js/: form.js  welfare_map.js
web (2)/mainwindow/templates/mainwindow/: base.html  home.html  welfare_map.html
web (2)/myproject/: models.py  urls.py  views.py
web (2)/myproject/migrations/: 0001_initial.py
web (2)/myproject/templates/myproject/: guest_login.html  id_login.html  login.html  qr_login.html  register_step1.html  register_step2.html
web (2)/youth_road/: matching_service.py  models.py  views.py
web (2)/youth_road/management/commands/: seed_youth_policies.py  sync_all_data.py
web/auth_mypage/: models.py  urls.py  views.py
web/config/: settings.py  urls.py  utils.py
web/mainwindow/: views.py
web_for_youth/: .env  db.sqlite3
youth_04_08/: db.sqlite3  pyproject.toml
청춘로_챗봇/: README.md  requirements.txt
(+179 files in other folders)
